@@ -105,12 +105,3 @@ sourceSets.main.resources.srcDirs += "${swaggerSources.owm.code.outputDir}/src/m
 compileJava.dependsOn swaggerSources.sunapi.code
 sourceSets.main.java.srcDirs += "${swaggerSources.sunapi.code.outputDir}/src/main/java"
 sourceSets.main.resources.srcDirs += "${swaggerSources.sunapi.code.outputDir}/src/main/resources"
-
-// todo maybe this can be removed as build is not silent anyway
-test {
-	// Workaround for https://github.com/gradle/gradle/issues/6725
-	// Should be removed when Gradle switch to Groovy 3
-	jvmArgs('--add-opens', 'java.base/java.lang=ALL-UNNAMED')
-	jvmArgs('--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED')
-	jvmArgs('--add-opens', 'java.base/java.util=ALL-UNNAMED')
-}
